removed a few folders

--- a/C1-linear-algebra/Week5/PageRank.ipynb
+++ b/C1-linear-algebra/Week5/PageRank.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +139,7 @@
        "       13.33333333])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +186,7 @@
        "       16.66666667])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +218,7 @@
        "        5.55555556])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -250,7 +250,7 @@
        "       13.33333333])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -290,7 +290,7 @@
        "       13.33433767])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +375,7 @@
        "       85.66547709, 14.28571429])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +445,7 @@
        "       20.70651779, 14.28571429])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -559,14 +559,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.5       , 0.        , 0.2       , 0.33333333, 0.        ],\n",
-       "       [0.5       , 0.5       , 0.2       , 0.        , 0.        ],\n",
-       "       [0.        , 0.5       , 0.2       , 0.33333333, 0.        ],\n",
-       "       [0.        , 0.        , 0.2       , 0.33333333, 0.        ],\n",
-       "       [0.        , 0.        , 0.2       , 0.        , 1.        ]])"
+       "array([[0.        , 1.        , 0.2       , 0.        , 0.        ],\n",
+       "       [0.5       , 0.        , 0.2       , 0.33333333, 0.        ],\n",
+       "       [0.        , 0.        , 0.2       , 0.        , 0.5       ],\n",
+       "       [0.5       , 0.        , 0.2       , 0.33333333, 0.5       ],\n",
+       "       [0.        , 0.        , 0.2       , 0.33333333, 0.        ]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -599,11 +599,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.00335598, 99.93791195,  0.00335598,  0.00335598,  0.01328357,\n",
-       "        0.00399756,  0.00335598,  0.01200041,  0.00207282,  0.01730975])"
+       "array([ 5.12786351, 15.38423639,  5.12786351, 10.25680384,  5.12786351,\n",
+       "        7.69308757, 10.25680384, 23.07699359, 12.82062071,  5.12786351])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -622,11 +622,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.00000004, 99.99999943,  0.00000004,  0.00000004,  0.00000011,\n",
-       "        0.00000005,  0.00000004,  0.00000009,  0.00000003,  0.00000013])"
+       "array([ 5.12820513, 15.38461538,  5.12820513, 10.25641026,  5.12820513,\n",
+       "        7.69230769, 10.25641026, 23.07692307, 12.82051282,  5.12820513])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -673,7 +673,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='2f733468-a0fe-43d5-92d0-8c7b0f363dce'></div>"
+       "<div id='5c5f4c62-9b93-4761-93e5-feeb33966f44'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -726,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 | packaged by conda-forge | (default, Nov 22 2022, 08:49:06) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
