--- a/C2-multivariate-calculus/Week6/Fitting the distribution of heights data.ipynb
+++ b/C2-multivariate-calculus/Week6/Fitting the distribution of heights data.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='e49a3a49-ce5f-4631-9e4e-199b4243e260'></div>"
+       "<div id='7fe99619-f4d0-466f-9324-fc901e031db6'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='60831210-f464-44d3-b4a5-d80c53caaf08'></div>"
+       "<div id='33222834-b26e-4e69-8cc3-e40b84e3dc6e'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -209,7 +209,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='e8db2f68-2e4e-431b-8fb0-7f2c13d03cde'></div>"
+       "<div id='2c8a500e-81b7-4316-b643-61db836d29b0'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -231,7 +231,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='efadef80-b323-456a-ae1b-a3a55c2c980d'></div>"
+       "<div id='d952c25b-5a43-4255-bab9-fe5d4de38d7c'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -294,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 | packaged by conda-forge | (default, Nov 22 2022, 08:49:06) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
